deploy/kubernetes/overlays/public-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shareslices-public
spec:
  rules:
    - host: app.shareslices.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shareslices-web
                port:
                  name: http
    - host: api.shareslices.example.com
      http:
        paths:
          - path: /internal
            pathType: Prefix
            backend:
              service:
                name: shareslices-web
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shareslices-api
                port:
                  name: http
    - host: view.shareslices.example.com
      http:
        paths:
          - path: /a
            pathType: Prefix
            backend:
              service:
                name: shareslices-api
                port:
                  name: http
    - host: content.shareslices-cdn.net
      http:
        paths:
          - path: /gallery-content
            pathType: Prefix
            backend:
              service:
                name: shareslices-content
                port:
                  name: http
